--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -13,9 +13,9 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 12.7       |
+  |  ThisStyleVersion: 12.8       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-04-03       |
+  |  LastUpdate: 2023-04-04       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・        |
 ----------------------------------*
 ******************************************/
@@ -481,7 +481,7 @@ td {
   margin: auto;
 }
 
-/* sm tb版 画像AUTOリサイズ
+/* 画像AUTOリサイズ
 -----------------------------------------------------------------*/
 
 .img-rs_syou {
@@ -591,7 +591,7 @@ textarea {
 
 .service_card_headline {
   margin: 0;
-  color: #1a1a1a;
+  color: #bbff99;
 }
 
 .service_card_description {
@@ -653,7 +653,7 @@ textarea {
 
 .blog_card_headline {
   margin: 0;
-  color: #1a1a1a;
+  color: #bbff99;
 }
 
 .blog_card_description {
@@ -793,6 +793,11 @@ textarea {
 /* ナビゲーションバー調整部
 -----------------------------------------------------------------*/
 
+.nav_setumei {
+  padding: 25px;
+  color: #ffaa99;
+}
+
 ul {
   padding-inline-start: 0;
 }
@@ -833,38 +838,19 @@ ul li a:hover {
 /* モーダル型ハンバーガーメニュー調整部
 -----------------------------------------------------------------*/
 
-.modal_menu-btn {
+.modal_menu-btn::before {
+  content: "🍔";
   position: fixed;
-  top: 5px;
   right: 5px;
-  height: 45px;
+  top: 5px;
   width: 45px;
+  height: 45px;
+  border-radius: 3px;
+  background-color: #1a1a1a;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 90;
-  background-color: #1a1a1a;
-}
-
-.modal_menu-btn span,
-.modal_menu-btn span:before,
-.modal_menu-btn span:after {
-  content: '';
-  display: block;
-  height: 3px;
-  width: 20px;
-  border-radius: 3px;
-  background-color: #0080ff;
-  position: absolute;
-  transition: all 0.45s;
-}
-
-.modal_menu-btn span:before {
-  bottom: 8px;
-}
-
-.modal_menu-btn span:after {
-  top: 8px;
+  cursor: pointer;
 }
 
 #modal_ham_nav {
@@ -890,15 +876,11 @@ ul li a:hover {
 
 #modal_ham_nav .modal_ham_nav_content {
   position: relative;
-  background-color: rgba(0,0,0,0.3);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  background-color: rgba(100,150,150,0.3);
   cursor: default;
   width: 80vw;
   height: 80vh;
   border: 1px solid #00ffff;
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -923,26 +905,29 @@ ul li a:hover {
   display: block;
 }
 
-#modal_ham_nav .close::before {
-  background: #fff;
+#modal_ham_nav .modal_ham_nav_box::before {
+  content: "";
+  background-color: rgba(0,0,0,0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   position: fixed;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
   cursor: default;
 }
 
 #modal_ham_nav .close::after {
-  content: "×";
-  color: white;
+  content: "❌";
   position: absolute;
   position: fixed;
   right: 5px;
   top: 5px;
   width: 45px;
   height: 45px;
-  z-index: 1;
   border-radius: 3px;
-  background-color: black;
+  background-color: #1a1a1a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1063,6 +1048,11 @@ ul li a:hover {
 
 /* sm tb版 ナビゲーションバー調整部
 -----------------------------------------------------------------*/
+
+.nav_setumei {
+  padding: 35px;
+  color: #fff;
+}
 
 ul {
   display: flex;
