--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -13,9 +13,9 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 13.4       |
+  |  ThisStyleVersion: 13.5       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-04-14       |
+  |  LastUpdate: 2023-04-16       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・        |
 ----------------------------------*
 ******************************************/
@@ -268,8 +268,8 @@ td {
 -----------------------------------------------------------------*/
 
 #loading {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   transition: all 1s;
   background-color: #fff;
   position: fixed;
@@ -853,16 +853,17 @@ ul li a {
 }
 
 ul li.current{
-  background-color: rgba(155,225,155,0.5);
+  background-color: rgba(120,120,120,0.8);
 }
 
 ul li.current a {
-  color: #14a7cc;
+  color: #ff5500;
 }
 
 ul li a:hover {
   border: 1px solid #00ff00;
   color: #fff;
+  box-sizing: border-box;
 }
 
 /* sm tb版 レスポンシブ化調整部
