--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -13,9 +13,9 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 14.3       |
+  |  ThisStyleVersion: 14.4       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-05-07       |
+  |  LastUpdate: 2023-10-03       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・        |
 ----------------------------------*
 ******************************************/
@@ -930,7 +930,8 @@ ul li a:hover {
   border-radius: 2px;
   padding: 5px;
   display: inline-block;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   animation: show 0.1s linear 0s;
 }
 
